--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".AllUsersActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FollowListActivity"
+            android:exported="false" />
+        <activity
             android:name=".Login"
             android:exported="false" />
         <activity
@@ -44,7 +50,6 @@
         <activity
             android:name=".BottomNavContainer"
             android:exported="false" />
-
         <activity
             android:name=".SignUp"
             android:exported="false" />
